@@ -1,5 +1,7 @@
 2021-04-XX   1.8.3:
 -------------------
+  * add `bitarray.util.ba2base()` and `bitarray.util.base2ba()`,
+    see last paragraph in [Bitarray representations](examples/represent.md)
   * documentation and tests
 
 
